- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    6.2.0, 6.2.1
- 
    None
Using the "selectionModel" property (came to TableView in 6.2) is not possible as currently described in the qt docu.
Importing QtQuick 2.2 results in "TableView.selectionModel" is not available in QtQuick 2.2".
However, importing QtQuick 6.2 does the trick when it comes to compiling and running, but it does not recognize any of the qml components (M16) in the creator.
This feels like a bug.
- is replaced by
- 
                    QTBUG-98481 decide how to show QML import versions in docs -         
- Closed
 
-         
- resulted from
- 
                    QTBUG-74750 TableView (in Qt Quick) doesn't support selecting items -         
- Closed
 
-