Add \since 6.2 to TableView.selectionModel property doc

Fixes: QTBUG-98440
Pick-to: 6.2
Change-Id: Ic8c6ccc81a2bf74a2739b3634b5816f2da356b8b
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>